tests/snapshots/parser@arrow_access.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/arrow_access.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 12,
        },
        source: "v.foo->v.bar\n",
        body: Simple(
            ArrowAccess(
                ArrowAccessExpression {
                    span: Span {
                        start: 0,
                        end: 12,
                    },
                    left: Variable(
                        VariableExpression {
                            span: Span {
                                start: 0,
                                end: 5,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 2,
                                        end: 5,
                                    },
                                    name: "foo",
                                },
                            },
                        },
                    ),
                    right: Variable(
                        VariableExpression {
                            span: Span {
                                start: 7,
                                end: 12,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 9,
                                        end: 12,
                                    },
                                    name: "bar",
                                },
                            },
                        },
                    ),
                },
            ),
        ),
    },
    errors: [],
}
