tests/snapshots/parser@block.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/block.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 5,
        },
        source: "{1;};\n",
        body: Complex(
            [
                Expression(
                    Block(
                        BlockExpression {
                            span: Span {
                                start: 0,
                                end: 4,
                            },
                            statements: [
                                Expression(
                                    NumericLiteral(
                                        NumericLiteral {
                                            span: Span {
                                                start: 1,
                                                end: 2,
                                            },
                                            value: 1.0,
                                            raw: "1",
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                ),
            ],
        ),
    },
    errors: [],
    panicked: false,
}
