tests/snapshots/parser@block_undelimited.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/block_undelimited.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 4,
        },
        source: "{1;}\n",
        body: Complex(
            [
                Expression(
                    Block(
                        BlockExpression {
                            span: Span {
                                start: 0,
                                end: 4,
                            },
                            statements: [
                                Expression(
                                    NumericLiteral(
                                        NumericLiteral {
                                            span: Span {
                                                start: 1,
                                                end: 2,
                                            },
                                            value: 1.0,
                                            raw: "1",
                                        },
                                    ),
                                ),
                            ],
                        },
                    ),
                ),
            ],
        ),
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "Semicolons are required for complex Molang expressions (contain `=` or `;`)",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    5,
                                ),
                                length: 0,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "Try inserting a semicolon here",
                ),
                severity: Error,
            },
        },
    ],
    panicked: false,
}
