tests/snapshots/parser@complex.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/complex.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 8,
        },
        source: "0;\n0;\n0;\n",
        body: Complex(
            [
                Expression(
                    NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 0,
                                end: 1,
                            },
                            value: 0.0,
                            raw: "0",
                        },
                    ),
                ),
                Expression(
                    NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 3,
                                end: 4,
                            },
                            value: 0.0,
                            raw: "0",
                        },
                    ),
                ),
                Expression(
                    NumericLiteral(
                        NumericLiteral {
                            span: Span {
                                start: 6,
                                end: 7,
                            },
                            value: 0.0,
                            raw: "0",
                        },
                    ),
                ),
            ],
        ),
    },
    errors: [],
    panicked: false,
}
