tests/snapshots/parser@for_each.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/for_each.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 39,
        },
        source: "for_each(v.a, q.foo, {v.b = v.a + 1;});\n",
        body: Complex(
            [
                ForEach(
                    ForEachStatement {
                        span: Span {
                            start: 0,
                            end: 38,
                        },
                        variable: VariableExpression {
                            span: Span {
                                start: 9,
                                end: 12,
                            },
                            scope: Variable,
                            member: Property {
                                property: Identifier {
                                    span: Span {
                                        start: 11,
                                        end: 12,
                                    },
                                    name: "a",
                                },
                            },
                        },
                        array: Variable(
                            VariableExpression {
                                span: Span {
                                    start: 14,
                                    end: 19,
                                },
                                scope: Query,
                                member: Property {
                                    property: Identifier {
                                        span: Span {
                                            start: 16,
                                            end: 19,
                                        },
                                        name: "foo",
                                    },
                                },
                            },
                        ),
                        block: BlockExpression {
                            span: Span {
                                start: 21,
                                end: 37,
                            },
                            statements: [
                                Assignment(
                                    AssignmentStatement {
                                        span: Span {
                                            start: 22,
                                            end: 35,
                                        },
                                        left: VariableExpression {
                                            span: Span {
                                                start: 22,
                                                end: 25,
                                            },
                                            scope: Variable,
                                            member: Property {
                                                property: Identifier {
                                                    span: Span {
                                                        start: 24,
                                                        end: 25,
                                                    },
                                                    name: "b",
                                                },
                                            },
                                        },
                                        operator: Assign,
                                        right: Binary(
                                            BinaryExpression {
                                                span: Span {
                                                    start: 28,
                                                    end: 35,
                                                },
                                                left: Variable(
                                                    VariableExpression {
                                                        span: Span {
                                                            start: 28,
                                                            end: 31,
                                                        },
                                                        scope: Variable,
                                                        member: Property {
                                                            property: Identifier {
                                                                span: Span {
                                                                    start: 30,
                                                                    end: 31,
                                                                },
                                                                name: "a",
                                                            },
                                                        },
                                                    },
                                                ),
                                                operator: Addition,
                                                right: NumericLiteral(
                                                    NumericLiteral {
                                                        span: Span {
                                                            start: 34,
                                                            end: 35,
                                                        },
                                                        value: 1.0,
                                                        raw: "1",
                                                    },
                                                ),
                                            },
                                        ),
                                    },
                                ),
                            ],
                        },
                    },
                ),
            ],
        ),
    },
    errors: [],
}
