tests/snapshots/parser@for_each_in_expr.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/for_each_in_expr.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "1 + for_each(v.a, q.foo, {0;})\n",
        body: Empty,
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "A loop cannot be used in expressions",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    4,
                                ),
                                length: 1,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: Some(
                    "Try defining it in a statement",
                ),
                severity: Error,
            },
        },
    ],
}
