tests/snapshots/parser@for_each_invalid_first_arg.nolana.snap
---
source: tests/integration.rs
input_file: tests/parser/for_each_invalid_first_arg.nolana
---
ParseResult {
    program: Program {
        span: Span {
            start: 0,
            end: 0,
        },
        source: "for_each(1, q.foo, {v.b = v.a + 1;});\n",
        body: Empty,
    },
    errors: [
        Diagnostic {
            inner: DiagnosticInner {
                message: "`for_each` first argument must be either a `variable.` or a `temp.`",
                labels: Some(
                    [
                        LabeledSpan {
                            label: None,
                            span: SourceSpan {
                                offset: SourceOffset(
                                    9,
                                ),
                                length: 1,
                            },
                            primary: false,
                        },
                    ],
                ),
                help: None,
                severity: Error,
            },
        },
    ],
}
